[package]
name = "egui_rhai_live_plot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_inspect = { git = "https://github.com/dmirauta/egui_inspect" }
eframe = { version = "0.25", default-features = false, features = [
  "glow",
  "default_fonts",
] }
egui = "0.25"
egui_plot = "0.25"
rhai = { version = "1.16.3", default-features = false, features = ["std"] }
ndarray = "0.15.6"
egui_extras = "0.25.0"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# env_logger = "0.10"
rfd = "0.13.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
