[package]
name = "egui_rhai_live_plot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# NOTE: 0.28 seems to have scaling issues on web
egui_inspect = { git = "https://github.com/dmirauta/egui_inspect", branch = "0_27" }
eframe = { version = "0.27", default-features = false, features = [
  "glow",
  "default_fonts",
] }
egui = "0.27"
egui_plot = "0.27"
egui_extras = "0.27"
rhai = { version = "1.19", default-features = false, features = ["std"] }
ndarray = "0.16"
# NOTE: 0.7.5 fails to find std::path
arrayvec = "0.7.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# env_logger = "0.10"
rfd = "0.14"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
